--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,7 @@ docs_dir: docs
 nav:
   - Home: index.md
   - Equipe: equipe.md
-  - Comandos Iniciais: initial_commands.md
+  - Como começar: initial_commands.md
   - Pipeline de Dados:
       - Oque é?: about_pipeline.md
       - Arquitetura: pipeline.md
